plugins {
    id 'org.springframework.boot' version '2.7.0'
    id "org.sonarqube" version "3.3"
    id 'com.adarshr.test-logger' version "3.0.0"
    id "org.hidetake.ssh" version "2.10.1" //ssh.gradle
    id 'net.nemerosa.versioning' version '2.15.0' // utils.gradle
}

apply from: 'gradle/ssh.gradle'
apply from: 'gradle/utils.gradle'
apply from: 'gradle/xjc.gradle'
apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'jacoco'

sourceCompatibility = '16'
archivesBaseName = 'pb-integration'

repositories {
    maven { url 'https://repo.spring.io/release' }
    mavenCentral()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-cache")
    implementation("org.zalando:logbook-spring-boot-starter:2.14.0")
    implementation("org.apache.commons:commons-lang3:3.12.0")
    implementation("ru.lanwen.verbalregex:java-verbal-expressions:1.8")
    implementation("com.sun.xml.bind:jaxb-impl:2.3.2")
    implementation("com.sun.xml.bind:jaxb-core:2.3.0.1")
    implementation("javax.validation:validation-api:2.0.1.Final")
    implementation("one.util:streamex:0.8.1")
    implementation("org.springframework.cloud:spring-cloud-starter-aws-messaging:2.2.6.RELEASE")
    implementation("com.amazonaws:aws-java-sdk-dynamodb:1.12.243")
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok'

    implementation("javax.xml.bind:jaxb-api:2.3.1")
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("pl.pragmatists:JUnitParams:1.1.1")
    testImplementation("io.codearte.jfairy:jfairy:0.5.9")
}


test {
    maxHeapSize = '4G'
}

testlogger {
    theme 'standard' // pick a theme - mocha, standard or plain
    showExceptions true // set to false to disable detailed failure logs
    slowThreshold 3000 // set threshold in milliseconds to highlight slow tests
    showSummary true // displays a breakdown of passes, failures and skips along with total duration
}

subprojects {
    tasks.withType(Test) {
        maxParallelForks = Runtime.runtime.availableProcessors()
    }
}

// compileJava.dependsOn xsd2java

classes {
    dependsOn saveVersionToFile
}